--- a/index.html
+++ b/index.html
@@ -25,29 +25,19 @@
         <section id="home" class="hero">
             <div class="container">
                 <h1>Tervetuloa Peliluolaan</h1>
-                <p>Build something amazing today</p>
-                <button class="cta-button">Get Started</button>
+                
+                
             </div>
         </section>
 
         <section id="about" class="about">
             <div class="container">
-                <h2>About Us</h2>
-                <p>Welcome to our website. We provide quality services and solutions for your needs.</p>
+                <h2>Tietoa meistä</h2>
+                <p>Olemme vuonna 2025 perustettu pelisivusto!</p>
             </div>
         </section>
 
-        <section id="contact" class="contact">
-            <div class="container">
-                <h2>Contact Us</h2>
-                <form class="contact-form">
-                    <input type="text" placeholder="Your Name" required>
-                    <input type="email" placeholder="Your Email" required>
-                    <textarea placeholder="Your Message" rows="5" required></textarea>
-                    <button type="submit" class="cta-button">Send Message</button>
-                </form>
-            </div>
-        </section>
+
     </main>
 
     <footer>
