--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="games.html">Games</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="games.html#number-game">Number Game</a></li>
+                    <li><a href="games.html#memory-game">Memory Game</a></li>
+                    <li><a href="games.html#speed-game">Speed Game</a></li>
                 </ul>
             </div>
         </nav>
