--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="games.html#number-game">Number Game</a></li>
-                    <li><a href="games.html#memory-game">Memory Game</a></li>
-                    <li><a href="games.html#speed-game">Speed Game</a></li>
+                    <li><a href="number-game.html">Number Game</a></li>
+                    <li><a href="memory-game.html">Memory Game</a></li>
                 </ul>
             </div>
         </nav>
