--- a/memory-game.html
+++ b/memory-game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Games - MyWebsite</title>
+    <title>Memory Match Game - Peliluola</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,9 +13,9 @@
                 <div class="logo">Peliluola</div>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="games.html">Games</a></li>
                     <li><a href="number-game.html">Number Game</a></li>
                     <li><a href="memory-game.html">Memory Game</a></li>
-                    <li><a href="speed-game.html">Speed Game</a></li>
                 </ul>
             </div>
         </nav>
@@ -24,20 +24,18 @@
     <main>
         <section class="games">
             <div class="container">
-                <h1>Choose Your Game</h1>
+                <h1>Memory Match Game</h1>
 
+                <!-- Memory Match Game -->
                 <div class="game-container">
-                    <!-- Game Selection Cards -->
-                    <div class="game-card">
-                        <h3>Number Guessing Game</h3>
-                        <p>Guess the number between 1 and 100</p>
-                        <a href="number-game.html" class="game-button">Play Now</a>
-                    </div>
-
                     <div class="game-card">
                         <h3>Memory Match Game</h3>
                         <p>Match pairs of cards</p>
-                        <a href="memory-game.html" class="game-button">Play Now</a>
+                        <div class="game-content">
+                            <div id="memoryBoard" class="memory-board"></div>
+                            <p id="matchMessage" class="game-message"></p>
+                            <button onclick="resetMemoryGame()" class="game-button">New Game</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -46,7 +44,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 MyWebsite. All rights reserved.</p>
+            <p>&copy; 2025 Peliluola. All rights reserved.</p>
         </div>
     </footer>
 
