--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar">
             <div class="container">
-                <div class="logo">Peliluola</div>
+                <div class="logo">PELILUOLA</div>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
