--- a/games.html
+++ b/games.html
@@ -13,19 +13,15 @@
                 <div class="logo">Peliluola</div>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#about">About</a></li>
                     <li><a href="number-game.html">Number Game</a></li>
                     <li><a href="memory-game.html">Memory Game</a></li>
-                    <li><a href="speed-game.html">Speed Game</a></li>
                 </ul>
             </div>
         </nav>
     </header>
 
     <main>
-        <section class="games">
-            <div class="container">
-                <h1>Choose Your Game</h1>
-
                 <div class="game-container">
                     <!-- Game Selection Cards -->
                     <div class="game-card">
