--- a/memory-game.html
+++ b/memory-game.html
@@ -13,7 +13,7 @@
                 <div class="logo">Peliluola</div>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="games.html">Games</a></li>
+                    <li><a href="index.html#about">About</a></li>
                     <li><a href="number-game.html">Number Game</a></li>
                     <li><a href="memory-game.html">Memory Game</a></li>
                 </ul>
