--- a/games.html
+++ b/games.html
@@ -1,58 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Games - MyWebsite</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <nav class="navbar">
-            <div class="container">
-                <div class="logo">Peliluola</div>
-                <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#about">About</a></li>
-                    <li><a href="number-game.html">Number Game</a></li>
-                    <li><a href="memory-game.html">Memory Game</a></li>
-                    <li><a href="speed-game.html">Speed Game</a></li>
-                </ul>
+
+<section class="games">
+    <h2>Games</h2>
+    <div class="game-container">
+        
+        <!-- Game 1 -->
+        <div class="game-card">
+            <h3>Guess the Number</h3>
+            <p>Try to guess the secret number within a limited number of attempts!</p>
+            <div class="game-content">
+                <input type="number" id="guessInput" placeholder="Enter your guess">
+                <button class="game-button">Submit Guess</button>
+                <div class="game-message info">Start guessing!</div>
+                <div class="attempts">Attempts left: 5</div>
             </div>
-        </nav>
-    </header>
-
-    <main>
-                <div class="game-container">
-                    <!-- Game Selection Cards -->
-                    <div class="game-card">
-                        <h3>Number Guessing Game</h3>
-                        <p>Guess the number between 1 and 100</p>
-                        <a href="number-game.html" class="game-button">Play Now</a>
-                    </div>
-
-                    <div class="game-card">
-                        <h3>Memory Match Game</h3>
-                        <p>Match pairs of cards</p>
-                        <a href="memory-game.html" class="game-button">Play Now</a>
-                    </div>
-
-                    <div class="game-card">
-                        <h3>Speed Click Game</h3>
-                        <p>Click 10 boxes as fast as you can!</p>
-                        <a href="speed-game.html" class="game-button">Play Now</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 MyWebsite. All rights reserved.</p>
         </div>
-    </footer>
 
-    <script src="script.js"></script>
-</body>
-</html>
+        <!-- Game 2 -->
+        <div class="game-card">
+            <h3>Memory Match</h3>
+            <p>Flip the cards and find all matching pairs as fast as you can.</p>
+            <div class="game-content">
+                <div class="memory-board">
+                    <!-- Cards will be generated dynamically via JS -->
+                </div>
+                <button class="game-button">Start Game</button>
+            </div>
+        </div>
+
+        <!-- Game 3 -->
+        <div class="game-card">
+            <h3>Speed Click</h3>
+            <p>Click the box as quickly as possible when it appears!</p>
+            <div class="game-content">
+                <div class="speed-game-area">
+                    <div class="speed-click-box">Click!</div>
+                </div>
+                <button class="game-button">Start Game</button>
+                       </div>
+        </div>
+
+    </div>
+
